--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <p id="numbers"></p>
             </div>
         </div>
+        <form action="">
+            <input type="text" placeholder="write your task">
+            <button type="submit">+</button>
+        </form>
+        <ul class="task-list"></ul>
     </div>
     
 </body>
