--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="stats-numbers">
-                <p id="numbers"></p>
+                <p id="numbers">2 / 3</p>
             </div>
         </div>
         <form action="">
