--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -18,15 +17,16 @@
                 </div>
             </div>
             <div class="stats-numbers">
-                <p id="numbers">2 / 3</p>
+                <p id="numbers">0/ 0</p>
             </div>
         </div>
         <form action="">
             <input type="text" id="taskInput" placeholder="write your task">
             <button id="newTask" type="submit">+</button>
         </form>
-        <ul class="task-list"></ul>
+        <ul id="task-list"></ul>
     </div>
     
+    <script src="script.js"></script>
 </body>
 </html>
